[gd_scene load_steps=8 format=3 uid="uid://bxj83hxxcdb5n"]

[ext_resource type="Texture2D" uid="uid://bm5xwhj6iidm8" path="res://assets/menu_button.png" id="1_3gli0"]
[ext_resource type="PackedScene" uid="uid://bpcxet2et6f8q" path="res://playground.tscn" id="1_juge5"]
[ext_resource type="Script" path="res://game.gd" id="1_miqks"]
[ext_resource type="PackedScene" uid="uid://dbadm1n3hum2t" path="res://game_option_dialog.tscn" id="3_5fcsb"]
[ext_resource type="PackedScene" uid="uid://dpyvv2tda5fal" path="res://game_over_dialog.tscn" id="4_0xe6x"]

[sub_resource type="LabelSettings" id="LabelSettings_y8hf1"]
font_size = 20
font_color = Color(0.117647, 0.752941, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d5hbg"]

[node name="Game" type="Node"]
script = ExtResource("1_miqks")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.415686, 0.305882, 1)

[node name="Header" type="ColorRect" parent="UI"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 56.0
grow_horizontal = 2
size_flags_horizontal = 3
color = Color(0.027451, 0.345098, 0.152941, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="score" type="Label" parent="UI/Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "score: 100"
label_settings = SubResource("LabelSettings_y8hf1")
horizontal_alignment = 1

[node name="Option" type="Button" parent="UI/Header/HBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_d5hbg")
icon = ExtResource("1_3gli0")
flat = true

[node name="playground" parent="." instance=ExtResource("1_juge5")]
position = Vector2(49, 75)

[node name="GameOptionDialog" parent="." instance=ExtResource("3_5fcsb")]
visible = false
offset_left = 85.0
offset_top = 115.0
offset_right = 508.0
offset_bottom = 426.0

[node name="GameOverDialog" parent="." instance=ExtResource("4_0xe6x")]
visible = false
offset_left = 82.0
offset_top = 115.0
offset_right = 505.0
offset_bottom = 426.0

[connection signal="pressed" from="UI/Header/HBoxContainer/Option" to="." method="_on_option_pressed"]
